--- a/pearls_04.html
+++ b/pearls_04.html
@@ -11,14 +11,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "pearls_04.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "pearls_04.css"], "outOfDate":[]};
 </script>
   
   <title>pearls_04</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=356884931"/>
-  <link rel="stylesheet" type="text/css" href="css/pearls_04.css?crc=4163986199" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/pearls_04.css?crc=4288366935" id="pagesheet"/>
    </head>
  <body>
 
@@ -26,7 +26,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="position_content" id="page_position_content">
     <div class="clearfix colelem" id="pu47376"><!-- group -->
      <div class="grpelem" id="u47376"><!-- animation -->
-      <iframe class="animationContainer an_invi" id="U47379_animation" src="assets/pearls-av_pantalla4/Pearls%20AV_Pantalla4.html" scrolling="no"></iframe>
+      <iframe class="animationContainer an_invi" id="U51835_animation" src="assets/pearls-av_pantalla4/Pearls%20AV_Pantalla4.html" scrolling="no"></iframe>
      </div>
      <!-- m_editable region-id="editable-static-tag-U47383" template="pearls_04.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
      <a class="nonblock nontext grpelem" id="u47383" href="pearls_03.html" data-href="page:U47189" data-muse-uid="U47383"><!-- simple frame --></a>
@@ -53,11 +53,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <div class="clip_frame grpelem" id="u1477"><!-- image -->
          <img class="block" id="u1477_img" src="images/menu1.png?crc=4265268451" alt="" width="781" height="121"/>
         </div>
-        <a class="nonblock nontext grpelem" id="u1583" href="vitanco_menu.html" data-href="page:U15510"><!-- simple frame --></a>
-        <a class="nonblock nontext grpelem" id="u1597" href="salofalk_menu.html" data-href="page:U10499"><!-- simple frame --></a>
-        <a class="nonblock nontext grpelem" id="u1602" href="ursofalk_menu.html" data-href="page:U10463"><!-- simple frame --></a>
-        <a class="nonblock nontext grpelem" id="u1605" href="pearls_menu.html" data-href="page:U15458"><!-- simple frame --></a>
-        <a class="nonblock nontext grpelem" id="u1608" href="farmeban_menu.html" data-href="page:U10427"><!-- simple frame --></a>
+        <a class="nonblock nontext rounded-corners grpelem" id="u1583" href="vitanco_menu.html" data-href="page:U15510"><!-- simple frame --></a>
+        <a class="nonblock nontext rounded-corners grpelem" id="u1597" href="salofalk_menu.html" data-href="page:U10499"><!-- simple frame --></a>
+        <a class="nonblock nontext rounded-corners grpelem" id="u1602" href="ursofalk_menu.html" data-href="page:U10463"><!-- simple frame --></a>
+        <a class="nonblock nontext rounded-corners grpelem" id="u1605" href="pearls_menu.html" data-href="page:U15458"><!-- simple frame --></a>
+        <a class="nonblock nontext rounded-corners grpelem" id="u1608" href="farmeban_menu.html" data-href="page:U10427"><!-- simple frame --></a>
        </div>
        <div class="Container invi clearfix grpelem" id="u1472"><!-- group -->
         <div class="clip_frame grpelem" id="u1579"><!-- image -->
@@ -66,12 +66,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <div class="clip_frame clearfix grpelem" id="u1473"><!-- image -->
          <img class="position_content" id="u1473_img" src="images/menu2.png?crc=468882088" alt="" width="878" height="115"/>
         </div>
-        <a class="nonblock nontext grpelem" id="u1539" href="tebonin_menu.html" data-href="page:U7661"><!-- simple frame --></a>
-        <a class="nonblock nontext grpelem" id="u1545" href="prosgutt_menu.html" data-href="page:U10207"><!-- simple frame --></a>
-        <a class="nonblock nontext grpelem" id="u1551" href="plantival_menu.html" data-href="page:U10243"><!-- simple frame --></a>
-        <a class="nonblock nontext grpelem" id="u1557" href="neolaikan_menu.html" data-href="page:U10279"><!-- simple frame --></a>
-        <a class="nonblock nontext grpelem" id="u1563" href="avala_menu.html" data-href="page:U10391"><!-- simple frame --></a>
-        <a class="nonblock nontext grpelem" id="u1566" href="index.html" data-href="page:U93"><!-- simple frame --></a>
+        <a class="nonblock nontext rounded-corners grpelem" id="u1539" href="tebonin_menu.html" data-href="page:U7661"><!-- simple frame --></a>
+        <a class="nonblock nontext rounded-corners grpelem" id="u1545" href="prosgutt_menu.html" data-href="page:U10207"><!-- simple frame --></a>
+        <a class="nonblock nontext rounded-corners grpelem" id="u1551" href="plantival_menu.html" data-href="page:U10243"><!-- simple frame --></a>
+        <a class="nonblock nontext rounded-corners grpelem" id="u1557" href="neolaikan_menu.html" data-href="page:U10279"><!-- simple frame --></a>
+        <a class="nonblock nontext rounded-corners grpelem" id="u1563" href="avala_menu.html" data-href="page:U10391"><!-- simple frame --></a>
+        <a class="nonblock nontext rounded-corners grpelem" id="u1566" href="index.html" data-href="page:U93"><!-- simple frame --></a>
        </div>
       </div>
      </div>
