--- a/pearls_06.html
+++ b/pearls_06.html
@@ -11,14 +11,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "pearls_06.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "pearls_06.css"], "outOfDate":[]};
 </script>
   
   <title>pearls_06</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=356884931"/>
-  <link rel="stylesheet" type="text/css" href="css/pearls_06.css?crc=287216367" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/pearls_06.css?crc=4063709217" id="pagesheet"/>
    </head>
  <body>
 
@@ -26,7 +26,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="position_content" id="page_position_content">
     <div class="clearfix colelem" id="pu47402"><!-- group -->
      <div class="grpelem" id="u47402"><!-- animation -->
-      <iframe class="animationContainer an_invi" id="U47405_animation" src="assets/pearls-av_pantalla6/Pearls%20AV_Pantalla6.html" scrolling="no"></iframe>
+      <iframe class="animationContainer an_invi" id="U51831_animation" src="assets/pearls-av_pantalla6/Pearls%20AV_Pantalla6.html" scrolling="no"></iframe>
      </div>
      <!-- m_editable region-id="editable-static-tag-U47409" template="pearls_06.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
      <a class="nonblock nontext grpelem" id="u47409" href="pearls_05.html" data-href="page:U47225" data-muse-uid="U47409"><!-- simple frame --></a>
